--- a/views/_layouts/admin.handlebars
+++ b/views/_layouts/admin.handlebars
@@ -101,7 +101,7 @@
             </a>
           </li>
           <li class="active treeview">
-            <a href="/admin/type">
+            <a href="/admin/cauhoi/">
               <i class="fa fa-laptop"></i>
               <span>Câu hỏi</span>
               <i class="fa fa-angle-left pull-right"></i>
