update fix bugs

--- a/views/_layouts/admin.handlebars
+++ b/views/_layouts/admin.handlebars
@@ -94,7 +94,7 @@
             </a>
           </li>
           <li class="active treeview">
-            <a href="/admin/producer">
+            <a href="/admin/dethi">
               <i class="fa fa-th"></i>
               <span>Đề thi</span>
               <i class="fa fa-angle-left pull-right"></i>
@@ -108,16 +108,30 @@
             </a>
           </li>
           <li class="active treeview">
-            <a href="/admin/product">
+            <a href="/admin/nguoidung">
               <i class="fa fa-product-hunt"></i>
               <span>Người dùng</span>
               <i class="fa fa-angle-left pull-right"></i>
             </a>
           </li>
           <li class="active treeview">
-            <a href="/admin/order">
+            <a href="/admin/ykien">
               <i class="fa fa-money"></i>
               <span>Ý kiến người dùng</span>
+              <i class="fa fa-angle-left pull-right"></i>
+            </a>
+          </li>
+           <li class="active treeview">
+            <a href="/admin/dapan">
+              <i class="fa fa-money"></i>
+              <span>Đáp án</span>
+              <i class="fa fa-angle-left pull-right"></i>
+            </a>
+          </li>
+           <li class="active treeview">
+            <a href="/admin/bailam">
+              <i class="fa fa-money"></i>
+              <span>Thông tin bài làm</span>
               <i class="fa fa-angle-left pull-right"></i>
             </a>
           </li>
@@ -158,7 +172,7 @@
               <div class="icon">
                 <i class="ion ion-hammer"></i>
               </div>
-              <a href="/admin/producer" class="small-box-footer">More info
+              <a href="/admin/dethi" class="small-box-footer">More info
                 <i class="fa fa-arrow-circle-right"></i>
               </a>
             </div>
@@ -175,7 +189,7 @@
               <div class="icon">
                 <i class="ion ion-pricetag"></i>
               </div>
-              <a href="/admin/type" class="small-box-footer">More info
+              <a href="/admin/cauhoi" class="small-box-footer">More info
                 <i class="fa fa-arrow-circle-right"></i>
               </a>
             </div>
@@ -192,7 +206,7 @@
               <div class="icon">
                 <i class="ion ion-laptop"></i>
               </div>
-              <a href="/admin/product" class="small-box-footer">More info
+              <a href="/admin/nguoidung" class="small-box-footer">More info
                 <i class="fa fa-arrow-circle-right"></i>
               </a>
             </div>
@@ -209,7 +223,7 @@
               <div class="icon">
                 <i class="ion ion-cash"></i>
               </div>
-              <a href="/admin/order" class="small-box-footer">More info
+              <a href="/admin/ykien" class="small-box-footer">More info
                 <i class="fa fa-arrow-circle-right"></i>
               </a>
             </div>
