--- a/views/admin/cauhoi/create.hbs
+++ b/views/admin/cauhoi/create.hbs
@@ -1,6 +1,8 @@
 {{#section 'title'}}
 <b>Add Question</b>
-{{/section}} {{#if showResult}}
+{{/section}} 
+
+{{#if showResult}}
 <div class="alert alert-success">
 	<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 	<strong>OK!</strong> Question added.
@@ -8,7 +10,15 @@
 {{/if}}
 
 <div class="container-fluid">
-	<form method="POST" role="form" enctype="multipart/form-data">
+	<form method="POST" role="form" action="add" enctype="multipart/form-data">
+		<div class="form-group">
+			<label for="">Mã đề thi</label>
+			<select name="MaDeThi" class="form-control">
+				{{#each vm.dethi_list}}
+					<option value="{{MaDeThi}}">{{MaDeThi}}</option>
+					{{/each}}
+			</select>
+		</div>
 		<div class="form-group">
 			<label for="">Nội dung</label>
 			<input type="text" class="form-control" name="NoiDung" placeholder="Nội dung câu hỏi">
@@ -27,15 +37,6 @@
 		</div>
 
 		<div class="form-group">
-			<label for="">Số lần thi</label>
-			<input type="number" class="form-control" name="SoLanThi">
-		</div>
-
-		<div class="form-group">
-			<label for="">Số lần đúng</label>
-			<input type="number" class="form-control" name="SoLanDung">
-		</div>
-		<div class="form-group">
 			<label for="">Đáp án đúng</label>
 			<select name="DapAnDung" class="form-control">
 				<option value="A">A</option>
@@ -44,11 +45,11 @@
 				<option value="D">D</option>
 			</select>
 		</div>
-		<a class="btn btn-default" href="/admin/cauhoi/" role="button">
+		<a class="btn btn-default" href="/admin/cauhoi" role="button">
 			<span class="glyphicon glyphicon-arrow-left"></span>
 			Trở về
 		</a>
-		<button class="btn btn-primary">
+		<button type="submit" class="btn btn-primary">
 			<span class="glyphicon glyphicon-ok"></span>
 			Thêm
 		</button>
