--- a/views/admin/dethi/index.hbs
+++ b/views/admin/dethi/index.hbs
@@ -1,40 +1,28 @@
 {{#section 'title'}}
-    <b>Exam</b>
+    <b>Đề thi</b>
 {{/section}}
 
-<div class="container" style="width: 100%">
+<div class="container" style="width: 97%">
 	<div class="row">
-		<div class="col-sm-6 col-md-6 col-lg-6">
-			<a class="btn btn-success" href="dethi/add" role="button">
-				<span class="glyphicon glyphicon-plus"></span>
-				Add
-			</a>
-		</div>
-	</div>
-	<div class="row">
-		<div >
+		<div class="col-sm-12 col-md-12 col-lg-12">
 			<table class="table table-hover">
 				<thead>
 					<tr>
-						<th>Mã Đề Thi</th>
-						<th>Mã môn học</th>
+						<th>Mã đề thi</th>
 						<th>Thời gian</th>
 						<th>Số câu</th>
-						<th>Số điểm một câu</th>
-						<th>Số lần thi</th>
-						<th>Ngày tạo</th>
+						<th>Số điểm 1 câu</th>
+						<th>Ngày Tạo</th>
 						<th>&nbsp;</th>
 					</tr>
 				</thead>
 				<tbody>
-					{{#each vm.dethi}}
+					{{#each vm.dethis}}
 					<tr>
 						<td>{{MaDeThi}}</td>
-						<td>{{MaCauHoi}}</td>
 						<td>{{ThoiGian}}</td>
 						<td>{{SoCau}}</td>
 						<td>{{SoDiemMotCau}}</td>
-						<td>{{SoLanThi}}</td>
 						<td>{{NgayTao}}</td>
 						<td class="text-right">
 							<a class="btn btn-default btn-xs" href="/admin/dethi/delete?id={{MaDeThi}}" role="button" onclick="return confirm('Bạn có muốn xóa hay không')">
@@ -51,5 +39,10 @@
 		</div>
 	</div>
 	
+	<div >
+		<a class="btn btn-success" href="dethi/add" role="button">
+			<span class="glyphicon glyphicon-plus"></span>
+			Add
+		</a>
+	</div>
 </div>
-<br><br><br><br>
