--- a/views/admin/dethi/update.hbs
+++ b/views/admin/dethi/update.hbs
@@ -1,56 +1,46 @@
 {{#section 'title'}}
-    <b>Add Product</b>
-{{/section}}
+<b>Update đề thi</b>
+{{/section}} 
 
 {{#if showResult}}
 <div class="alert alert-success">
 	<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-	<strong>OK!</strong> Test added.
+	<strong>OK!</strong> Đề thi updated
 </div>
 {{/if}}
 
-<div class="container-fluid" >
-	<form action="add" method="POST" role="form" enctype="multipart/form-data">
+{{#with vm.dethi}}
+<div class="container-fluid">
+	<form method="post" role="form" action="update" >
 		<div class="form-group">
-			<label for="">Tên bài test</label>
-			<input type="text" class="form-control" name="name" value="{{name}}">
-		</div>
-		<div class="form-group">
-			<label for="">Môn học</label>
-			<select name="subject" class="form-control">
-				{{#each vm.subject}}
-					<option value="{{id}}">{{ten}}</option>
-				{{/each}}			
-			</select>
-		</div>
-        <div class="form-group">
-			<label for="">Câu hỏi</label>
-			<div name="question" class="form-control">
-				{{#each vm.question}}
-					<input type="checkbox" value="{{id}}">{{ten}}</option>
-				{{/each}}			
-			</div>
+			<label for="">Mã đề thi</label>
+			<input type="text" class="form-control" name="MaDeThi" value="{{MaDeThi}}" readonly="readonly">
 		</div>
 		<div class="form-group">
-			<label for="">Thời gian (s)</label>
-			<input type="number" name="time" class="form-control" value="{{time}}"/>
+			<label for="">Thời gian</label>
+			<input type="text" class="form-control" name="ThoiGian" value="{{ThoiGian}}">
 		</div>
 		<div class="form-group">
-			<label for="">Điểm một câu</label>
-			<input type="number" class="form-control" name="point" value="{{point}}"/>
+			<label for="">Số câu</label>
+			<input type="text" class="form-control" name="SoCau" value="{{SoCau}}">
 		</div>
 		<div class="form-group">
-			<label for="">Số lần thi</label>
-			<input type="number" class="form-control" name="try">
+			<label for="">Số điểm 1 câu</label>
+			<input type="text" class="form-control" name="SoDiemMotCau" value="{{SoDiemMotCau}}">
 		</div>
-		<a class="btn btn-default" href="/admin/product" role="button">
+
+		<a class="btn btn-default" href="/admin/dethi" role="button">
 			<span class="glyphicon glyphicon-arrow-left"></span>
-			Back
+			Trở về
 		</a>
 		<button type="submit" class="btn btn-primary">
 			<span class="glyphicon glyphicon-ok"></span>
-			Add
+			Update
 		</button>
-		<br><br><br><br>
+		<br>
+		<br>
+		<br>
+		<br>
 	</form>
 </div>
+{{/with}}
