begin handle client

--- a/views/_layouts/main.handlebars
+++ b/views/_layouts/main.handlebars
@@ -58,7 +58,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <!-- header -->
                 <div class="logo-search">
                     <div class="logo">
-                        <h1><a href="index.html">N<span class="color">h</span><span class="color1">ó</span><span class="color2">m</span> <span>5</span> <i>Luyện thi vào lớp 6</i></a></h1>
+                        <h1><a href="/">N<span class="color">h</span><span class="color1">ó</span><span class="color2">m</span> <span>5</span> <i>Luyện thi vào lớp 6</i></a></h1>
                     </div>
                     <div class="search">
                         <form>
@@ -86,13 +86,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
                             <nav class="stroke">
                                 <ul class="nav navbar-nav">
-                                    <li class=""><a href="index.html">Trang chủ</a></li>
-                                    <li><a href="gallery.html" class="hvr-rectangle-out">Danh sách bài học</a></li>
-                                    <li><a href="gallery.html" class="hvr-rectangle-out">Danh sách đề thi</a></li>
-                                    <li><a href="services.html" class="hvr-rectangle-out">Giới thiệu</a></li>
-                                    <li><a href="events.html" class="hvr-rectangle-out">Liên hệ</a></li>
-                                    <li><a href="mail.html" class="hvr-rectangle-out">Đăng ký</a></li>
-                                    <li><a href="mail.html" class="hvr-rectangle-out">Đăng nhập</a></li>
+                                    <li class=""><a href="">Trang chủ</a></li>
+                                    <li><a href="/baihoc" class="hvr-rectangle-out">Bài học</a></li>
+                                    <li><a href="/dethi" class="hvr-rectangle-out">Luyện thi</a></li>
+                                    <li><a href="/gioithieu" class="hvr-rectangle-out">Giới thiệu</a></li>
+                                    <li><a href="/lienhe" class="hvr-rectangle-out">Liên hệ</a></li>
+                                    <li><a href="/dangky" class="hvr-rectangle-out">Đăng ký</a></li>
+                                    <li><a href="/dangnhap" class="hvr-rectangle-out">Đăng nhập</a></li>
 
                                 </ul>
                             </nav>
