--- a/views/admin/dethi/update.hbs
+++ b/views/admin/dethi/update.hbs
@@ -9,7 +9,7 @@
 </div>
 {{/if}}
 
-{{#with vm.nguoidung}}
+{{#with vm.dethi}}
 <div class="container-fluid">
 	<form method="post" role="form" action="update" >
 		<div class="form-group">
