--- a/views/_layouts/main.handlebars
+++ b/views/_layouts/main.handlebars
@@ -48,6 +48,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         position: relative;
     }
 </style>
+{{{_sections.css}}}
 </head>
     
 <body>
@@ -86,7 +87,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
                             <nav class="stroke">
                                 <ul class="nav navbar-nav">
-                                    <li class=""><a href="">Trang chủ</a></li>
+                                    <li class=""><a href="/">Trang chủ</a></li>
                                     <li><a href="/baihoc" class="hvr-rectangle-out">Bài học</a></li>
                                     <li><a href="/dethi" class="hvr-rectangle-out">Luyện thi</a></li>
                                     <li><a href="/gioithieu" class="hvr-rectangle-out">Giới thiệu</a></li>
@@ -193,5 +194,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- for bootstrap working -->
     <script src="js/bootstrap.js"></script>
 <!-- //for bootstrap working -->
+{{{_sections.js}}}
 </body>
 </html>
