--- a/views/admin/dethi/create.hbs
+++ b/views/admin/dethi/create.hbs
@@ -11,7 +11,10 @@
 
 <div class="container-fluid">
 	<form method="post" role="form" action="add" >
-		
+		<div class="form-group">
+			<label for="">Tên đề thi</label>
+			<input type="text" class="form-control" name="TenDeThi" >
+		</div>
 		<div class="form-group">
 			<label for="">Thời gian</label>
 			<input type="text" class="form-control" name="ThoiGian" >
