--- a/views/admin/dethi/index.hbs
+++ b/views/admin/dethi/index.hbs
@@ -9,6 +9,7 @@
 				<thead>
 					<tr>
 						<th>Mã đề thi</th>
+						<th>Tên đề thi</th>
 						<th>Thời gian</th>
 						<th>Số câu</th>
 						<th>Số điểm 1 câu</th>
@@ -20,6 +21,7 @@
 					{{#each vm.dethis}}
 					<tr>
 						<td>{{MaDeThi}}</td>
+						<td>{{TenDeThi}}</td>
 						<td>{{ThoiGian}}</td>
 						<td>{{SoCau}}</td>
 						<td>{{SoDiemMotCau}}</td>
