--- a/views/admin/dethi/update.hbs
+++ b/views/admin/dethi/update.hbs
@@ -17,6 +17,10 @@
 			<input type="text" class="form-control" name="MaDeThi" value="{{MaDeThi}}" readonly="readonly">
 		</div>
 		<div class="form-group">
+			<label for="">Tên đề thi</label>
+			<input type="text" class="form-control" name="TenDeThi" value="{{TenDeThi}}">
+		</div>
+		<div class="form-group">
 			<label for="">Thời gian</label>
 			<input type="text" class="form-control" name="ThoiGian" value="{{ThoiGian}}">
 		</div>
