--- a/views/client/danhsachdethi.hbs
+++ b/views/client/danhsachdethi.hbs
@@ -1,168 +1,64 @@
-<div class="banner">
-				<div class="banner-grids">
-					<div class="banner-left">
-						<div class="banner-left1">
-							<div class="banner-left1-grid">
-								<img src="images/1.jpg" alt=" " class="img-responsive" />
-								<div class="banner-info">
-									<a class="read-more" href="#"><i></i></a>
-									<h3>
-										<a href="#">
-											Kids Playing
-										</a>
-									</h3>
-									<div class="event-meta">
-										<h4>Mô tả</h4>
-										<p>Nội dung</p>
-									</div>
-								</div>
-							</div>
-							<div class="banner-left1-grid">
-								<img src="images/1.jpg" alt=" " class="img-responsive" />
-								<div class="banner-info">
-									<a class="read-more" href="#"><i></i></a>
-									<h3>
-										<a href="#">
-											Kids Playing
-										</a>
-									</h3>
-									<div class="event-meta">
-										<h4>Mô tả</h4>
-										<p>Nội dung</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="banner-left2">
-							<div class="banner-left1-grid">
-								<img src="images/3.jpg" alt=" " class="img-responsive" />
-								<div class="banner-info">
-									<a class="read-more" href="#"><i></i></a>
-									<h3>
-										<a href="#">
-											Kids Playing
-										</a>
-									</h3>
-									<div class="event-meta">
-										<h4>Mô tả</h4>
-										<p>Nội dung</p>
-									</div>
-								</div>
-							</div>
-							<div class="banner-left1-grid">
-								<img src="images/1.jpg" alt=" " class="img-responsive" />
-								<div class="banner-info">
-									<a class="read-more" href="#"><i></i></a>
-									<h3>
-										<a href="#">
-											Kids Playing
-										</a>
-									</h3>
-									<div class="event-meta">
-										<h4>Mô tả</h4>
-										<p>Nội dung</p>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="clearfix"> </div>
-					</div>
-					<div class="banner-right">
-						<section class="slider">
-							<div class="flexslider">
-								<ul class="slides">
-									<li>
-										<div class="services-grid-right-grid1">
-											
-										</div>
-									</li>
-									<li>
-										<div class="services-grid-right-grid2">
-											
-										</div>
-									</li>
-									<li>
-										<div class="services-grid-right-grid3">
-											
-										</div>
-									</li>
-								</ul>
-							</div>
-						</section>
-								<!--FlexSlider-->
-								<script defer src="js/jquery.flexslider.js"></script>
-								<script type="text/javascript">
-									$(window).load(function(){
-									  $('.flexslider').flexslider({
-										animation: "slide",
-										start: function(slider){
-										  $('body').removeClass('loading');
-										}
-									  });
-									});
-								</script>
-								<!--End-slider-script-->
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-			</div>
-			<!-- //banner -->
-			<!-- services -->
-				<div class="services">
-					<h2>Danh sách đề luyện thi</h2>
-					
-					<div class="services-grids1">
-						<div class="col-md-3 services-grids1-grid">
-							<img src="images/2.jpg" alt=" " class="img-responsive" />
-							<h4><a href="single.html">Đề luyện thi môn Toán</a></h4>
-							<h5>Thời gian làm bài: 60 phút</h5>
-							<p>Độ khó: dễ</p>
-							<div class="more">
-								<a href="single.html" class="hvr-rectangle-out">Xem</a>
-							</div>
-						</div>
-						<div class="col-md-3 services-grids1-grid">
-							<img src="images/1.jpg" alt=" " class="img-responsive" />
-							<h4><a href="single.html">Đề luyện thi môn Toán</a></h4>
-							<h5>Thời gian làm bài: 90 phút</h5>
-							<p>Độ khó: trung bình</p>
-							<div class="more">
-								<a href="single.html" class="hvr-rectangle-out">Xem</a>
-							</div>
-						</div>
-						<div class="col-md-3 services-grids1-grid">
-							<img src="images/13.jpg" alt=" " class="img-responsive" />
-							<h4><a href="single.html">Đề luyện thi môn Toán</a></h4>
-							<h5>Thời gian làm bài: 90 phút</h5>
-							<p>Độ khó: khó</p>
-							<div class="more">
-								<a href="single.html" class="hvr-rectangle-out">Xem</a>
-							</div>
-						</div>
-						<div class="col-md-3 services-grids1-grid">
-							<img src="images/14.jpg" alt=" " class="img-responsive" />
-							<h4><a href="single.html">Đề luyện thi môn Tiếng Việt</a></h4>
-							<h5>Thời gian làm bài: 60 phút</h5>
-							<p>Độ khó: trung bình</p>
-							<div class="more">
-								<a href="single.html" class="hvr-rectangle-out">Xem</a>
-							</div>
-						</div>
-						<div class="clearfix"> </div>
-					</div>
-				</div>
-			<!-- //services -->
-			</div>
-		</div>
-		<nav style="text-align:center">
-			<ul class="pagination">
-				<li><a href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
-				<li><a href="#">1</a></li>
-				<li><a href="#">2</a></li>
-				<li><a href="#">3</a></li>
-				<li><a href="#">4</a></li>
-				<li><a href="#">5</a></li>
-				<li><a href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
-			</ul>
-		</nav>
+{{#section 'css'}}
+     <style type="text/css" media="screen">
+      	.kt_content_item {
+		    border-bottom: 1px dotted #cecece;
+		    display: inline-block;
+		    text-align: left;
+		    width: 100%;
+		    padding: 20px 0;
+		}
+		.img_kt._month8 {
+		    background: rgba(0, 0, 0, 0) url(../image/banner/img_kt_thang_8.png) no-repeat scroll left center;
+		}
+		.kt_content_item ._right {
+		    display: inline-block;
+		    margin-top: 25px;
+		    vertical-align: top;
+		    width: 530px;
+		}
+		a {
+		    text-decoration: none;
+		    color: #474747;
+		    padding: 0;
+		    margin: 0;
+		}
+     </style>>
+{{/section}}
+	<!-- services -->
+<div class="services">
+	<h2>Danh sách đề luyện thi</h2>
+	
+	<div class="services-grids1">
+		{{#each dethis}}
+			 <div class="kt_content_item">
+	            <img width="100px" height="100px" src="../../public/images/10.jpg">
+	            <div class="_right">
+	                <a href="https://www.luyenthi123.com/de-kiem-tra/toan-lop-1/7-de-kiem-tra-15-phut-thang-8-mien-phi.html">
+	                    <div>
+	                        <h4 class="_title">
+	                            {{TenDeThi}}
+	                        </h4>
+	                    </div>
+	                </a>
+	                <div style="color:#888888;font-size: 14px;">(Bài kiểm tra tổng hợp kiến thức của năm học trước)</div>
+	            </div>
+	        </div>
+        {{/each}}
+
+		
+		<div class="clearfix"> </div>
 	</div>
+</div>
+	<!-- //services -->
+
+<nav style="text-align:center">
+	<ul class="pagination">
+		<li><a href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
+		<li><a href="#">1</a></li>
+		<li><a href="#">2</a></li>
+		<li><a href="#">3</a></li>
+		<li><a href="#">4</a></li>
+		<li><a href="#">5</a></li>
+		<li><a href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
+	</ul>
+</nav>
