update DB, show ds de thi, chi tiet de thi

--- a/views/client/danhsachdethi.hbs
+++ b/views/client/danhsachdethi.hbs
@@ -33,7 +33,7 @@
 			 <div class="kt_content_item">
 	            <img width="100px" height="100px" src="../../public/images/10.jpg">
 	            <div class="_right">
-	                <a href="https://www.luyenthi123.com/de-kiem-tra/toan-lop-1/7-de-kiem-tra-15-phut-thang-8-mien-phi.html">
+	                <a href="/dethi/chitiet?id={{MaDeThi}}">
 	                    <div>
 	                        <h4 class="_title">
 	                            {{TenDeThi}}
