CSS ds de thi, chtiet dthi

--- a/views/_layouts/main.handlebars
+++ b/views/_layouts/main.handlebars
@@ -9,17 +9,17 @@
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
         function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- js -->
-<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
-<script src="js/jquery-1.11.1.min.js"></script>
+<link rel="stylesheet" href="/css/flexslider.css" type="text/css" media="screen" />
+<script src="/js/jquery-1.11.1.min.js"></script>
 <!-- //js -->
 <link href='//fonts.googleapis.com/css?family=Cabin:400,400italic,500,500italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
 <link href='//fonts.googleapis.com/css?family=Peralta' rel='stylesheet' type='text/css'>
 <!-- start-smoth-scrolling -->
-<script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>
+<script type="text/javascript" src="/js/move-top.js"></script>
+<script type="text/javascript" src="/js/easing.js"></script>
 <script type="text/javascript">
     jQuery(document).ready(function($) {
         $(".scroll").click(function(event){     
@@ -96,10 +96,10 @@
                     </nav>
                 </div>
             <!-- //nav -->
-           
+         
 
            {{{body}}}
-    
+     </div> 
 <!-- footer -->
     <div class="footer">
         <div class="container">
@@ -135,22 +135,22 @@
                 </div>
                 <div class="col-md-3 footer-grid">
                     <div class="footer-grid-left">
-                        <a href="single.html"><img src="images/10.jpg" alt=" " class="img-responsve" /></a>
+                        <a href="single.html"><img src="/images/10.jpg" alt=" " class="img-responsve" /></a>
                     </div>
                     <div class="footer-grid-left">
-                        <a href="single.html"><img src="images/12.jpg" alt=" " class="img-responsve" /></a>
+                        <a href="single.html"><img src="/images/12.jpg" alt=" " class="img-responsve" /></a>
                     </div>
                     <div class="footer-grid-left">
-                        <a href="single.html"><img src="images/11.jpg" alt=" " class="img-responsve" /></a>
+                        <a href="single.html"><img src="/images/11.jpg" alt=" " class="img-responsve" /></a>
                     </div>
                     <div class="footer-grid-left">
-                        <a href="single.html"><img src="images/10.jpg" alt=" " class="img-responsve" /></a>
+                        <a href="single.html"><img src="/images/10.jpg" alt=" " class="img-responsve" /></a>
                     </div>
                     <div class="footer-grid-left">
-                        <a href="single.html"><img src="images/8.jpg" alt=" " class="img-responsve" /></a>
+                        <a href="single.html"><img src="/images/8.jpg" alt=" " class="img-responsve" /></a>
                     </div>
                     <div class="footer-grid-left">
-                        <a href="single.html"><img src="images/9.jpg" alt=" " class="img-responsve" /></a>
+                        <a href="single.html"><img src="/images/9.jpg" alt=" " class="img-responsve" /></a>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
@@ -186,7 +186,7 @@
     </script>
 <!-- //here ends scrolling icon -->
 <!-- for bootstrap working -->
-    <script src="js/bootstrap.js"></script>
+    <script src="/js/bootstrap.js"></script>
 <!-- //for bootstrap working -->
 {{{_sections.js}}}
 </body>
