--- a/views/client/content.hbs
+++ b/views/client/content.hbs
@@ -83,7 +83,7 @@
 								<div class="l_g">
 									<div class="banner-bottom-grid1">
 										<div class="col-xs-4 banner-bottom-grid-left">
-											<img src="images/8.jpg" alt=" " class="img-responsive" />
+											<img src="../../images/8.jpg" alt=" " class="img-responsive" />
 										</div>
 										<div class="col-xs-8 banner-bottom-grid-left">
 											<h4><a href="single.html">unde omnis iste natus error sit voluptatem</a></h4>
@@ -92,7 +92,7 @@
 									</div>
 									<div class="banner-bottom-grid1">
 										<div class="col-xs-4 banner-bottom-grid-left">
-											<img src="images/9.jpg" alt=" " class="img-responsive" />
+											<img src="../../images/9.jpg" alt=" " class="img-responsive" />
 										</div>
 										<div class="col-xs-8 banner-bottom-grid-left">
 											<h4><a href="single.html">"Lorem ipsum dolor consectetur adipiscing</a></h4>
@@ -101,7 +101,7 @@
 									</div>
 									<div class="banner-bottom-grid1">
 										<div class="col-xs-4 banner-bottom-grid-left">
-											<img src="images/10.jpg" alt=" " class="img-responsive" />
+											<img src="../../images/10.jpg" alt=" " class="img-responsive" />
 										</div>
 										<div class="col-xs-8 banner-bottom-grid-left">
 											<h4><a href="single.html">culpa qui officia deserunt mollit anim id</a></h4>
@@ -110,7 +110,7 @@
 									</div>
 									<div class="banner-bottom-grid1">
 										<div class="col-xs-4 banner-bottom-grid-left">
-											<img src="images/11.jpg" alt=" " class="img-responsive" />
+											<img src="../../images/11.jpg" alt=" " class="img-responsive" />
 										</div>
 										<div class="col-xs-8 banner-bottom-grid-left">
 											<h4><a href="single.html">Itaque earum rerum hic tenetur a sapiente</a></h4>
@@ -119,7 +119,7 @@
 									</div>
 									<div class="banner-bottom-grid1">
 										<div class="col-xs-4 banner-bottom-grid-left">
-											<img src="images/12.jpg" alt=" " class="img-responsive" />
+											<img src="../../images/12.jpg" alt=" " class="img-responsive" />
 										</div>
 										<div class="col-xs-8 banner-bottom-grid-left">
 											<h4><a href="single.html">ut aut reiciendis voluptatibus maiores</a></h4>
@@ -132,7 +132,7 @@
 								<div class="l_g">
 									<div class="banner-bottom-grid1">
 										<div class="col-xs-4 banner-bottom-grid-left">
-											<img src="images/8.jpg" alt=" " class="img-responsive" />
+											<img src="../../images/8.jpg" alt=" " class="img-responsive" />
 										</div>
 										<div class="col-xs-8 banner-bottom-grid-left">
 											<h4><a href="single.html">unde omnis iste natus error sit voluptatem</a></h4>
@@ -141,7 +141,7 @@
 									</div>
 									<div class="banner-bottom-grid1">
 										<div class="col-xs-4 banner-bottom-grid-left">
-											<img src="images/9.jpg" alt=" " class="img-responsive" />
+											<img src="../../images/9.jpg" alt=" " class="img-responsive" />
 										</div>
 										<div class="col-xs-8 banner-bottom-grid-left">
 											<h4><a href="single.html">"Lorem ipsum dolor consectetur adipiscing</a></h4>
@@ -150,7 +150,7 @@
 									</div>
 									<div class="banner-bottom-grid1">
 										<div class="col-xs-4 banner-bottom-grid-left">
-											<img src="images/10.jpg" alt=" " class="img-responsive" />
+											<img src="../../images/10.jpg" alt=" " class="img-responsive" />
 										</div>
 										<div class="col-xs-8 banner-bottom-grid-left">
 											<h4><a href="single.html">culpa qui officia deserunt mollit anim id</a></h4>
@@ -168,7 +168,7 @@
 					<h3>Các bài giảng, tin tức mới</h3>
 					<div class="banner-bottom-grid-fig">
 						<div class="banner-bottom-grid-fig1">
-							<img src="images/4.jpg" alt=" " class="img-responsive" />
+							<img src="../../images/4.png" alt=" " class="img-responsive" />
 							<div class="banner-bottom-grid-fig1-pos">
 								<a href="single.html">At vero eos et accusamus et iusto odio dignissimos ducimus</a>
 								<p><i class="glyphicon glyphicon-time" aria-hidden="true"></i>March 20, 2016 By <a href="single.html">Andrew Smith</a></p>
