--- a/views/client/danhsachdethi.hbs
+++ b/views/client/danhsachdethi.hbs
@@ -22,7 +22,7 @@
 		    padding: 0;
 		    margin: 0;
 		}
-     </style>>
+     </style>
 {{/section}}
 	<!-- services -->
 <div class="services">
@@ -31,7 +31,7 @@
 	<div class="services-grids1">
 		{{#each dethis}}
 			 <div class="kt_content_item">
-	            <img width="100px" height="100px" src="../../public/images/10.jpg">
+	            <img width="100px" height="100px" src="../../images/10.jpg">
 	            <div class="_right">
 	                <a href="/dethi/chitiet?id={{MaDeThi}}">
 	                    <div>
@@ -48,9 +48,8 @@
 		
 		<div class="clearfix"> </div>
 	</div>
+	
 </div>
-	<!-- //services -->
-
 <nav style="text-align:center">
 	<ul class="pagination">
 		<li><a href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
@@ -62,3 +61,6 @@
 		<li><a href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
 	</ul>
 </nav>
+	<!-- //services -->
+
+
