--- a/views/client/index.hbs
+++ b/views/client/index.hbs
@@ -4,7 +4,7 @@
 						<div class="banner-left">
 							<div class="banner-left1">
 								<div class="banner-left1-grid">
-									<img src="images/1.jpg" alt=" " class="img-responsive" />
+									<img src="/images/1.jpg" alt=" " class="img-responsive" />
 									<div class="banner-info">
 										<a class="read-more" href="single.html"><i></i></a>
 										<h3>
@@ -19,7 +19,7 @@
 									</div>
 								</div>
 								<div class="banner-left1-grid">
-									<img src="images/4.jpg" alt=" " class="img-responsive" />
+									<img src="/images/1.jpg" alt=" " class="img-responsive" />
 									<div class="banner-info">
 										<a class="read-more" href="single.html"><i></i></a>
 										<h3>
@@ -36,7 +36,7 @@
 							</div>
 							<div class="banner-left2">
 								<div class="banner-left1-grid">
-									<img src="images/3.jpg" alt=" " class="img-responsive" />
+									<img src="/images/1.jpg" alt=" " class="img-responsive" />
 									<div class="banner-info">
 										<a class="read-more" href="single.html"><i></i></a>
 										<h3>
@@ -51,7 +51,7 @@
 									</div>
 								</div>
 								<div class="banner-left1-grid">
-									<img src="images/2.jpg" alt=" " class="img-responsive" />
+									<img src="/images/2.jpg" alt=" " class="img-responsive" />
 									<div class="banner-info">
 										<a class="read-more" href="single.html"><i></i></a>
 										<h3>
@@ -127,7 +127,7 @@
 										<div class="l_g">
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="images/8.jpg" alt=" " class="img-responsive" />
+													<img src="/images/8.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">unde omnis iste natus error sit voluptatem</a></h4>
@@ -136,7 +136,7 @@
 											</div>
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="images/9.jpg" alt=" " class="img-responsive" />
+													<img src="/images/9.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">"Lorem ipsum dolor consectetur adipiscing</a></h4>
@@ -145,7 +145,7 @@
 											</div>
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="images/10.jpg" alt=" " class="img-responsive" />
+													<img src="/images/10.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">culpa qui officia deserunt mollit anim id</a></h4>
@@ -154,7 +154,7 @@
 											</div>
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="images/11.jpg" alt=" " class="img-responsive" />
+													<img src="/images/11.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">Itaque earum rerum hic tenetur a sapiente</a></h4>
@@ -163,7 +163,7 @@
 											</div>
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="images/12.jpg" alt=" " class="img-responsive" />
+													<img src="/images/12.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">ut aut reiciendis voluptatibus maiores</a></h4>
@@ -176,7 +176,7 @@
 										<div class="l_g">
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="images/8.jpg" alt=" " class="img-responsive" />
+													<img src="/images/8.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">unde omnis iste natus error sit voluptatem</a></h4>
@@ -185,7 +185,7 @@
 											</div>
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="images/9.jpg" alt=" " class="img-responsive" />
+													<img src="/images/9.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">"Lorem ipsum dolor consectetur adipiscing</a></h4>
@@ -194,7 +194,7 @@
 											</div>
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="images/10.jpg" alt=" " class="img-responsive" />
+													<img src="/images/10.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">culpa qui officia deserunt mollit anim id</a></h4>
@@ -212,7 +212,7 @@
 							<h3>Các bài giảng, tin tức mới</h3>
 							<div class="banner-bottom-grid-fig">
 								<div class="banner-bottom-grid-fig1">
-									<img src="images/4.jpg" alt=" " class="img-responsive" />
+									<img src="/images/4.png" alt=" " class="img-responsive" />
 									<div class="banner-bottom-grid-fig1-pos">
 										<a href="single.html">At vero eos et accusamus et iusto odio dignissimos ducimus</a>
 										<p><i class="glyphicon glyphicon-time" aria-hidden="true"></i>March 20, 2016 By <a href="single.html">Andrew Smith</a></p>
@@ -242,6 +242,5 @@
 					</div>
 				</div>
 			<!-- //banner-bottom -->
-			</div>
-		</div>
-	</div>
+			
+		
