--- a/public/css/style.css
+++ b/public/css/style.css
@@ -203,6 +203,11 @@ span.color2{
     float: right;
     width: 49%;
 }
+.banner-left3 {
+    float: left;
+	width: 32%;
+	margin-left: 11px;
+}
 .banner-left{
 	float:left;
 	width:45%;
@@ -2357,7 +2362,7 @@ h2.typoh2{
 	.navbar-toggle {
 		margin:.5em 0 0 6.8em;
 	}
-	.banner-left1,.banner-left2 {
+	.banner-left1,.banner-left2,.banner-left3 {
 		float: none;
 		width: 100%;
 	}
