--- a/views/client/index.hbs
+++ b/views/client/index.hbs
@@ -1,73 +1,58 @@
 <!-- banner -->
 				<div class="banner">
 					<div class="banner-grids">
-						<div class="banner-left">
-							<div class="banner-left1">
+							<div class="banner-left3">
 								<div class="banner-left1-grid">
-									<img src="/images/1.jpg" alt=" " class="img-responsive" />
+									<img src="images/math.jpg" alt=" " class="img-responsive" />
 									<div class="banner-info">
 										<a class="read-more" href="single.html"><i></i></a>
 										<h3>
 											<a href="single.html">
-												Bài luyện thi
+												Toán
 											</a>
 										</h3>
 										<div class="event-meta">
-											<h4>Miêu tả ngắn</h4>
-											<p>Bài học về luyện thi lớp 6</p>
-										</div>
-									</div>
-								</div>
-								<div class="banner-left1-grid">
-									<img src="/images/1.jpg" alt=" " class="img-responsive" />
-									<div class="banner-info">
-										<a class="read-more" href="single.html"><i></i></a>
-										<h3>
-											<a href="single.html">
-												Bài luyện thi
-											</a>
-										</h3>
-										<div class="event-meta">
-											<h4>Miêu tả ngắn</h4>
-											<p>Bài học về luyện thi lớp 6</p>
+											<h4>Kiến thức toán học từ cơ bản đến nâng cao</h4>
+											<p>Phân số, số thập phân, bài toán chuyển động đều,...</p>
 										</div>
 									</div>
 								</div>
 							</div>
-							<div class="banner-left2">
+							<div class="banner-left3">
 								<div class="banner-left1-grid">
-									<img src="/images/1.jpg" alt=" " class="img-responsive" />
+									<img src="images/vietnamese.jpg" alt=" " class="img-responsive" />
 									<div class="banner-info">
 										<a class="read-more" href="single.html"><i></i></a>
 										<h3>
 											<a href="single.html">
-												Bài luyện thi
+												Tiếng Việt
 											</a>
 										</h3>
 										<div class="event-meta">
-											<h4>Miêu tả ngắn</h4>
-											<p>Bài học về luyện thi lớp 6</p>
+											<h4>Kiến thức tiếng Việt theo chủ đề</h4>
+											<p>Việt Nam - Tổ quốc em, cánh chim hoà bình,...</p>
 										</div>
 									</div>
 								</div>
+							</div>
+							<div class="banner-left3">
 								<div class="banner-left1-grid">
-									<img src="/images/2.jpg" alt=" " class="img-responsive" />
+									<img src="images/english.jpg" alt=" " class="img-responsive" />
 									<div class="banner-info">
 										<a class="read-more" href="single.html"><i></i></a>
 										<h3>
 											<a href="single.html">
-												Bài giảng
+												Tiếng Anh
 											</a>
 										</h3>
 										<div class="event-meta">
-											<h4>Miêu tả ngắn</h4>
-											<p>Bài học về luyện thi lớp 6</p>
+											<h4>Kiến thức tiếng Anh theo chủ điểm ngữ pháp</h4>
+											<p>Chào hỏi trong tiếng Anh, Các thì trong tiếng Anh,...</p>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="clearfix"> </div>
-						</div>
 						
 						<div class="clearfix"> </div>
 					</div>
@@ -127,7 +112,7 @@
 										<div class="l_g">
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="/images/8.jpg" alt=" " class="img-responsive" />
+													<img src="images/8.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">unde omnis iste natus error sit voluptatem</a></h4>
@@ -136,7 +121,7 @@
 											</div>
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="/images/9.jpg" alt=" " class="img-responsive" />
+													<img src="images/9.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">"Lorem ipsum dolor consectetur adipiscing</a></h4>
@@ -145,7 +130,7 @@
 											</div>
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="/images/10.jpg" alt=" " class="img-responsive" />
+													<img src="images/10.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">culpa qui officia deserunt mollit anim id</a></h4>
@@ -154,7 +139,7 @@
 											</div>
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="/images/11.jpg" alt=" " class="img-responsive" />
+													<img src="images/11.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">Itaque earum rerum hic tenetur a sapiente</a></h4>
@@ -163,7 +148,7 @@
 											</div>
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="/images/12.jpg" alt=" " class="img-responsive" />
+													<img src="images/12.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">ut aut reiciendis voluptatibus maiores</a></h4>
@@ -176,7 +161,7 @@
 										<div class="l_g">
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="/images/8.jpg" alt=" " class="img-responsive" />
+													<img src="images/8.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">unde omnis iste natus error sit voluptatem</a></h4>
@@ -185,7 +170,7 @@
 											</div>
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="/images/9.jpg" alt=" " class="img-responsive" />
+													<img src="images/9.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">"Lorem ipsum dolor consectetur adipiscing</a></h4>
@@ -194,7 +179,7 @@
 											</div>
 											<div class="banner-bottom-grid1">
 												<div class="col-xs-4 banner-bottom-grid-left">
-													<img src="/images/10.jpg" alt=" " class="img-responsive" />
+													<img src="images/10.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
 													<h4><a href="single.html">culpa qui officia deserunt mollit anim id</a></h4>
@@ -211,13 +196,6 @@
 						<div class="col-md-4 banner-bottom-grid">
 							<h3>Các bài giảng, tin tức mới</h3>
 							<div class="banner-bottom-grid-fig">
-								<div class="banner-bottom-grid-fig1">
-									<img src="/images/4.png" alt=" " class="img-responsive" />
-									<div class="banner-bottom-grid-fig1-pos">
-										<a href="single.html">At vero eos et accusamus et iusto odio dignissimos ducimus</a>
-										<p><i class="glyphicon glyphicon-time" aria-hidden="true"></i>March 20, 2016 By <a href="single.html">Andrew Smith</a></p>
-									</div>
-								</div>
 								<div class="banner-bottom-grid-fig-grid">
 									<div class="banner-bottom-grid-fig-grid1">
 										<h4><span>Plan-1</span><a href="single.html">Sed ut perspiciatis unde omnis iste natus</a></h4>
@@ -242,5 +220,6 @@
 					</div>
 				</div>
 			<!-- //banner-bottom -->
-			
-		
+			</div>
+		</div>
+	</div>
