--- a/views/client/signup.hbs
+++ b/views/client/signup.hbs
@@ -6,7 +6,7 @@
             <div class="col-md-6 login">
                   <form action="dangky" method="post" id="form_dangky">
                         <input class="login-form" type="text" id="TenNguoiDung" name="TenNguoiDung" placeholder="Tên đăng nhập" required=" ">
-                        <input class="login-form" type="text" id="Email" name="Email" placeholder="Email của bạn" required=" " >
+                        <input class="login-form" type="email" id="Email" name="Email" placeholder="Email của bạn" required=" " >
                         <input class="login-form" type="text" id="SDT" name="SDT" placeholder="Số điện thoại" required=" " onkeypress='return event.charCode >= 48 && event.charCode <= 57'>
                         <input class="login-form" type="password" id="MatKhau" name="MatKhau" placeholder="Mật khẩu" required=" ">
                         <input class="login-form" type="password" id="NhapLaiMatKhau" name="NhapLaiMatKhau" placeholder="Nhập lại mật khẩu" required=" ">
