--- a/views/client/index.hbs
+++ b/views/client/index.hbs
@@ -64,8 +64,15 @@
 						<div class="col-md-4 banner-bottom-grid">
 							<h3>Chào mừng đến với<span> Luyện thi lớp 6</span></h3>
 							<h2><i>" Trang luyện thi chất lượng, uy tín. "</i></h2>
-							<p>Giới thiệu thông tin về trang ở đây 
-								<span></span></p>
+							<h2 style="text-align:center;">Lộ trình dạy và học</h2>
+							{{!-- <p>Giới thiệu thông tin về trang ở đây 
+								<span></span></p> --}}
+							<p><ul style="margin-left: 15px;">
+								<li>Giới thiệu tổng quan về môn học</li>
+								<li>Cung cấp KIẾN THỨC CƠ BẢN cho môn học (5-7 bài học)</li>
+								<li>Cung cấp KIẾN THỨC NÂNG CAO cho môn học (3-4 bài học)</li>
+								<li>Cung cấp các bài luyện thi theo từng tháng</li>
+							</ul></p>
 							<div class="more">
 								<a href="single.html" class="hvr-rectangle-out">Read More...</a>
 							</div>
@@ -115,7 +122,7 @@
 													<img src="images/8.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
-													<h4><a href="single.html">unde omnis iste natus error sit voluptatem</a></h4>
+													<h4><a href="single.html">Toán học - Các phép toán với số thập phân</a></h4>
 												</div>
 												<div class="clearfix"> </div>
 											</div>
@@ -124,7 +131,7 @@
 													<img src="images/9.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
-													<h4><a href="single.html">"Lorem ipsum dolor consectetur adipiscing</a></h4>
+													<h4><a href="single.html">Toán học - Vận tốc, quãng đường, thời gian</a></h4>
 												</div>
 												<div class="clearfix"> </div>
 											</div>
@@ -133,7 +140,7 @@
 													<img src="images/10.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
-													<h4><a href="single.html">culpa qui officia deserunt mollit anim id</a></h4>
+													<h4><a href="single.html">Tiếng Việt - Vì cuộc sống thanh bình</a></h4>
 												</div>
 												<div class="clearfix"> </div>
 											</div>
@@ -142,7 +149,7 @@
 													<img src="images/11.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
-													<h4><a href="single.html">Itaque earum rerum hic tenetur a sapiente</a></h4>
+													<h4><a href="single.html">Tiếng Anh - Các câu chào hỏi thông dụng</a></h4>
 												</div>
 												<div class="clearfix"> </div>
 											</div>
@@ -151,7 +158,7 @@
 													<img src="images/12.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
-													<h4><a href="single.html">ut aut reiciendis voluptatibus maiores</a></h4>
+													<h4><a href="single.html">Tiếng Anh - Thì hiện tại hoàn thành</a></h4>
 												</div>
 												<div class="clearfix"> </div>
 											</div>
@@ -164,7 +171,7 @@
 													<img src="images/8.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
-													<h4><a href="single.html">unde omnis iste natus error sit voluptatem</a></h4>
+													<h4><a href="single.html">Tiếng Anh - Thì quá khứ đơn</a></h4>
 												</div>
 												<div class="clearfix"> </div>
 											</div>
@@ -173,7 +180,7 @@
 													<img src="images/9.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
-													<h4><a href="single.html">"Lorem ipsum dolor consectetur adipiscing</a></h4>
+													<h4><a href="single.html">Tiếng Việt - Con người với thiên nhiên</a></h4>
 												</div>
 												<div class="clearfix"> </div>
 											</div>
@@ -182,7 +189,7 @@
 													<img src="images/10.jpg" alt=" " class="img-responsive" />
 												</div>
 												<div class="col-xs-8 banner-bottom-grid-left">
-													<h4><a href="single.html">culpa qui officia deserunt mollit anim id</a></h4>
+													<h4><a href="single.html">Tiếng Việt - Nhớ nguồn</a></h4>
 												</div>
 												<div class="clearfix"> </div>
 											</div>
