--- a/views/client/login.hbs
+++ b/views/client/login.hbs
@@ -19,7 +19,7 @@
 
                    <form action="dangnhap" method="post" id="form_dangnhap">
                         <input class="login-form" type="email" id="Email" name="Email" placeholder="Email" required=" ">
-                        <input class="login-form" type="text" id="MatKhau" name="MatKhau" placeholder="Mật khẩu" required=" ">
+                        <input class="login-form" type="password" id="MatKhau" name="MatKhau" placeholder="Mật khẩu" required=" ">
                         <button class="button-login" type="submit">Đăng nhập</button>
                   </form>
             </div>
