--- a/views/client/danhsachbaihoc.hbs
+++ b/views/client/danhsachbaihoc.hbs
@@ -60,24 +60,23 @@
 <nav style="text-align:center">
 	<ul class="pagination">
 		<li><a href="javascript:previous()" id="prev" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
-		<li><a href="/baihoc/1">1</a></li>
-		<li><a href="/baihoc/2">2</a></li>
-		<li><a href="/baihoc/3">3</a></li>
-		<li><a href="/baihoc/4">4</a></li>
-		<li><a href="/baihoc/5">5</a></li>
+		{{#each page}}
+		<li><a href="/baihoc/{{this}}" id="page-{{this}}">{{this}}</a></li>
+		{{/each}}
 		<li><a href="javascript:next()" id="next"aria-label="Next"><span aria-hidden="true">»</span></a></li>
 	</ul>
 </nav>
 
 <script>
+	let token = window.location.href.split("/");
+	let page = token[token.length - 1];
+	if(parseInt(page)){
+		$("#page-" + page).css("color", "red");
+	}
 	function previous(){
-		let token = window.location.href.split("/");
-		let page = token[token.length - 1];
 		window.location.replace("/baihoc/" + (parseInt(page) - 1));
 	}
 	function next(){
-		let token = window.location.href.split("/");
-		let page = token[token.length - 1];
 		window.location.replace("/baihoc/" + (parseInt(page) + 1));
 	}
 </script>
